# wixpkgdep-rs

./: .editorconfig  Cargo.toml  rust-toolchain
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
examples/: chkdeps.rs
examples/common/: mod.rs
src/: error.rs  lib.rs  provider.rs  registry.rs  version.rs
